Fix overlapping the header over the section with content

--- a/style.css
+++ b/style.css
@@ -10,24 +10,21 @@ html {
 
 body {
     background: #18191b;
-    color: white;
-    font-family: Calibri, Arial, sans-serif;    
+    color: rgb(150, 150, 150);
+    font-family: Arial, sans-serif;    
     display: flex;
-    justify-content: center;
     padding: 0 80px 0;
 }
 
-
-
-/* HEADER */
+/*================ HEADER ================*/
 
 .header {
+    position: fixed;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    flex: 0 0 500px;
     padding: 80px 0;
 }
 
@@ -42,5 +39,15 @@ body {
 }
 
 .social {
-    flex: 0 0 0;
+    flex: 0 0 1;
 }
+
+/*================ MAIN ================*/
+
+.main {
+    max-width: 500px;
+    margin: 0 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    padding: 80px 0;
+    }
